--- a/src/GlobalStyles.scss
+++ b/src/GlobalStyles.scss
@@ -21,7 +21,7 @@ $Font-mobile-small-C: 12px !default;
 .font-color-B{
     
     color: hsl(346, 37%, 42%);
-    color: hsl(351, 39%, 40%);
+    color: #8e3e4a;
 }
 
 .underline{
