--- a/src/Components/scss/CategoryHomeslider.scss
+++ b/src/Components/scss/CategoryHomeslider.scss
@@ -42,6 +42,7 @@
     .home-category-carousel-container{
         height: auto !important;
         max-height: max-content !important ;
+        padding: 12px 0px;
         width: 94%;
        
         
