--- a/src/Components/scss/ProductSectionCategoryCardSection.scss
+++ b/src/Components/scss/ProductSectionCategoryCardSection.scss
@@ -65,8 +65,8 @@
 
 
 .category-product-section__card-main-container{
-   
-    width: 46%;
+   cursor: pointer;
+    width: 44%;
     max-width: 190px;
     border-radius: 6px;
     
