--- a/src/Components/scss/Header.scss
+++ b/src/Components/scss/Header.scss
@@ -3,13 +3,13 @@
 
 .header__banner-text-container{
     width: 100%;
-    height: 6 * 6px;
+    height: 6 * 2px;
    
     text-align: center;
     position: relative;
     background-color: #f6f6f6;
     background-color: hsl(338, 26%, 88%);
-    background-color:#e9cdd1;
+    background-color:hsl(351, 39%, 84%);
     
 
   
@@ -255,7 +255,7 @@
    
 }
 
-@media (min-width: 900px) {
+@media (min-width: 768px) {
   
  
   .header__navbar__icon-home{
