some new product modal styles and close button changes

--- a/src/Components/scss/HeaderConnectorType.scss
+++ b/src/Components/scss/HeaderConnectorType.scss
@@ -136,7 +136,7 @@
 @media (min-width: 768px) {
     .product-section__category__filter-main-container {
 
-        bottom: -192%;
+        bottom: -162%;
 
     }
 
@@ -155,7 +155,8 @@
 @media (min-width: 1200px) {
     .product-section__category__filter-main-container {
 
-        bottom: -272%;
+        
+        bottom: -116% !important;;
 
     }
 
