--- a/src/Components/scss/Footer.scss
+++ b/src/Components/scss/Footer.scss
@@ -1,7 +1,7 @@
 .footeer-prev-transparent-container{
     height: 64px;
    
-    width: 100vw;
+    width: 100%;
     position:relative;
 }
 .footer-container{
