--- a/src/Components/scss/PopupProductModalContent.scss
+++ b/src/Components/scss/PopupProductModalContent.scss
@@ -1,3 +1,7 @@
+.popup-product-modal__outside-fade{
+    z-index: 2000;
+}
+
 .popup-product-modal__outside-container{
     height: 100vh;
     width: 100vw;
@@ -5,7 +9,7 @@
     position: fixed;
     z-index: 2000;
     overflow-y: auto;
-    background-color: rgba(152, 124, 132, 0.92);
+    background-color: hsla(349, 16%, 68%, 0.92);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,6 +17,10 @@
     
     .popup-product-modal__loader-animated { 
         position: absolute; 
+        
+        top: 50%;
+        bottom: 50%;
+        margin: 0;
         
       } 
 
@@ -22,6 +30,7 @@
         width: 94%;
         padding-bottom: 32px;
         margin-top: 78px;
+        
         
 
 
@@ -41,9 +50,29 @@
         .modal-product-modal__info__description-container{
             max-height: 120px;
             overflow: hidden;
+            transition: all .5s ease-in;
         }
         .description-show{
+            
             max-height: fit-content;
+            animation-name: descriptionExpand;
+            animation-iteration-count: 1;
+            animation-duration: 1s;
+        }
+
+        @keyframes descriptionExpand {
+            0%{
+                max-height: 120px;
+            }
+
+         
+
+            90%{
+                max-height: 800px;
+            }
+            100%{
+                max-height: fit-content;
+            }
         }
 
 
@@ -64,11 +93,25 @@
             align-self: end;
             justify-self: end;
             width: 100%;
+           
+            margin-bottom: 16px;
             
         }
         .popup-product-modal__buy-button{
             height: 64px;
            
+           display: flex;
+           flex-direction: row;
+           justify-content: space-between;
+           align-items: center;
+
+           p{
+            margin-left: 16px;
+           }
+
+           .popup-product-modal__buy-icon{
+            margin-right: 16px;
+           }
         }
 
         .popup-product-modal__close-modal-button-container{
