--- a/src/Components/scss/Header.scss
+++ b/src/Components/scss/Header.scss
@@ -3,7 +3,7 @@
 
 .header__banner-text-container{
     width: 100%;
-    height: 6 * 2px;
+    height: 42px;
    
     text-align: center;
     position: relative;
