--- a/src/GlobalStyles.scss
+++ b/src/GlobalStyles.scss
@@ -322,6 +322,25 @@ text-decoration: underline;
 
 }
 
+.button-active-animated{
+    cursor: pointer;
+  
+    transition:all .005s ease-in ;
+    -webkit-tap-highlight-color: rgba(0,0,0,0); 
+}
+
+
+.button-active-animated:active{
+   
+  background-color: #8e3e4a50;
+    
+    
+}
+
+
+
+
+
 
 
 
