--- a/src/Components/scss/PopupProductModalContent.scss
+++ b/src/Components/scss/PopupProductModalContent.scss
@@ -36,11 +36,28 @@
 
         .popup-product-modal__image-container{
             height: 260px;
-            img{
-                    height: 92%;
-                    width: 92%;
-                    object-fit: cover;
+
+            div{
+                height: 100%;
+                width: 100%;
             }
+           
+            .modal-info-img-1{
+              
+                height: 92%;
+                width: 92%;
+                object-fit: cover;
+             }
+
+             .modal-info-img-icon-expand{
+                border-radius: 4px;
+                padding: 4px 8px;
+                position: absolute;
+                bottom: 20px;
+                right: 24px;
+                border: 1px solid rgba(240, 238, 238, 0.703);
+             }
+           
         }
 
          
@@ -52,26 +69,48 @@
             overflow: hidden;
             transition: all .5s ease-in;
         }
+
         .description-show{
-            
+            transition: all .5s ease-in;
             max-height: fit-content;
             animation-name: descriptionExpand;
             animation-iteration-count: 1;
-            animation-duration: 1s;
+            animation-duration: 360ms;
+            animation-timing-function:cubic-bezier(0.6, 0.04, 0.98, 0.335)
         }
-
+        .description-hide{
+            transition: all .5s ease-in;
+           
+            animation-name: descriptionHide;
+            animation-iteration-count: 1;
+            animation-duration: 360ms;
+            
+        }
         @keyframes descriptionExpand {
             0%{
                 max-height: 120px;
             }
 
-         
-
+          
             90%{
-                max-height: 800px;
+                max-height: 700px;
             }
             100%{
                 max-height: fit-content;
+            }
+        }
+        @keyframes descriptionHide {
+        
+            0%{
+                max-height: fit-content;
+            }
+           
+            10%{
+                max-height: 680px;
+            }
+         
+            100%{
+                max-height: 120px;
             }
         }
 
