--- a/src/GlobalStyles.scss
+++ b/src/GlobalStyles.scss
@@ -108,6 +108,10 @@ text-decoration: underline;
     cursor: pointer;
 }
 
+.pointer{
+    cursor: pointer;
+}
+
 .position-relative{
     position: relative;
 }
