--- a/src/Components/scss/BrowserPopupContent.scss
+++ b/src/Components/scss/BrowserPopupContent.scss
@@ -1,238 +1,176 @@
+.browser-outside-container {
+  position: fixed;
+  z-index: 1800;
+  width: 100vw;
+  height: auto;
+  max-height: auto;
+  background-color: rgb(184, 184, 184);
 
-.browser-outside-container{
-    position: fixed;
-    z-index: 1800;
-    width: 100vw;
-    height: auto;
-    max-height: auto;
-    background-color: rgb(184, 184, 184);
-   
-    background-color:hsl(0, 0%, 98%);
-    background-color: hsla(11, 60%, 82%, 0.88);
-    background-color: rgba(152, 124, 132, 0.758);
-    background-color: hsla(349, 16%, 68%, 0.92);
-    background-color: hsla(20, 24%, 78%, 0.928);
-    backdrop-filter: blur(2px);
-    -webkit-backdrop-filter: blur((2px));
-    
-   
-   
+  background-color: hsl(0, 0%, 98%);
+  background-color: hsla(11, 60%, 82%, 0.88);
+  background-color: rgba(152, 124, 132, 0.758);
+  background-color: hsla(349, 16%, 68%, 0.92);
+  background-color: hsla(34, 40%, 82%, 0.928);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur((2px));
 }
 
-.browser-container{
-    
-    height: 90%;
-    min-height: 86%;
-    
-   
+.browser-container {
+  height: 90%;
+  min-height: 86%;
 
-    .browser-input-container{
-       
-        
-        
-        width: 88%;
-        border-radius: 4px;
+  .browser-input-container {
+    width: 88%;
+    border-radius: 4px;
 
-        input{
-            width: 100%;
-            height: 100%;
-            border-radius: 6px;
-            border: none;
-            padding-left: 12px;
-            height: 6*8px;
-            color: hsl(0, 0%, 23%);
-            font-weight: 500;
-            font-size: 18px;
-            transition: .05s ease-out;
-
-          
-            
-        }
-        input:focus{
-            color: hsl(0, 0%, 23%);
-            font-weight: 500;
-            font-size: 18px;
-            outline: none;
-            
-            
-            
-            
-        }
-        
-        
-
-        
+    input {
+      width: 100%;
+      height: 100%;
+      border-radius: 6px;
+      border: none;
+      padding-left: 12px;
+      height: 6 * 8px;
+      color: hsl(0, 0%, 23%);
+      font-weight: 500;
+      font-size: 18px;
+      transition: 0.05s ease-out;
     }
+    input:focus {
+      color: hsl(0, 0%, 23%);
+      font-weight: 500;
+      font-size: 18px;
+      outline: none;
+    }
+  }
 
-    .browser-pagination__pagination-container{
-        align-self: end;
-        justify-self: center;
-        width: 50%;
-        
+  .browser-pagination__pagination-container {
+    align-self: end;
+    justify-self: center;
+    width: 50%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+
+    .browser-pagination {
+      margin-bottom: 9px;
+      margin-right: -6px;
+      button {
+        border-radius: 4px;
+        border: none;
         display: flex;
+        justify-content: center;
         flex-direction: row;
-        justify-content: end;
-       
+        padding: 4px 8px;
+        margin-left: 6px;
+        margin-right: 6px;
+      }
+    }
+  }
 
-        
-        .browser-pagination{
-            margin-bottom: 9px;
-            margin-right: -6px;
-            button{
-                border-radius: 4px;
-              border: none;
-              display: flex;
-              justify-content: center;
-              flex-direction: row;
-              padding: 4px 8px;
-              margin-left: 6px;
-              margin-right: 6px;
-              
-            }
-        }
-        
+  .browser-back-button-container {
+    position: relative;
+
+    margin-top: 16px;
+    margin-bottom: 12px;
+    width: 86%;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+
+    border-radius: 6px;
+
+    .browser-back-icon-container {
+      justify-self: end;
+      align-self: end;
+    }
+    div {
+      height: 54px;
+      border-radius: 6px;
+
+      .browser-back-button-icon {
+        font-size: 2.2em;
+      }
+    }
+  }
+  .browser-input__delete-icon {
+    position: absolute;
+    right: 32px;
+    font-size: 1.4em;
+    color: #eee7e7;
+    background-color: rgba(128, 76, 76, 0.84);
+    border-radius: 50%;
+  }
+  .browser-result-title-container {
+    width: 100%;
+  }
+  .browser-results-title {
+    align-self: start;
+    width: auto;
+    justify-self: end;
+    text-align: end;
+    margin-top: 54px;
+    border-radius: 4px;
+    padding: 6px 10px 6px 10px;
+  }
+
+  .browser-results-container {
+    position: relative;
+    overflow: auto;
+    width: 90%;
+
+    height: 700px;
+
+    scrollbar-width: 0px;
+
+    scrollbar-color: transparent;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: start;
+    align-content: start;
+
+    .browser-result-inner-container {
+      margin-bottom: 12px;
+      width: auto;
+      height: auto;
     }
 
-    .browser-back-button-container{
-        position: relative;
-        
-        margin-top: 16px;
-        margin-bottom: 12px;
-         width: 86%;
-         display: flex;
-         flex-direction: row;
-         justify-content: end;
-        
-         border-radius: 6px;
-
-
-         .browser-back-icon-container{
-            justify-self: end;
-            align-self: end;
-         }
-         div{
-             
-             height: 54px;
-             border-radius: 6px;
-
-             .browser-back-button-icon{
-                 font-size: 2.2em;
-             }
-         }
-     }
-     .browser-input__delete-icon{
-        position: absolute;
-        right: 32px;
-        font-size: 1.4em;
-        color: #eee7e7;
-        background-color: rgba(128, 76, 76, 0.84);
-        border-radius: 50%;
-     }
-     .browser-result-title-container{
-        width: 100%;
-        
-     }
-     .browser-results-title{
-        align-self: start;
-        width:auto;
-       justify-self: end;
-        text-align: end;
-        margin-top: 54px;
-        border-radius: 4px;
-        padding: 6px 10px 6px 10px;
+    .browser-result-li-img {
+      width: 70px;
+      height: 40px;
+      margin: 6px 6px;
+      border-radius: 4px;
+      object-fit: cover;
+      border: 2px solid rgba(146, 87, 87, 0.091);
     }
 
- 
+    li {
+      border-radius: 6px;
+      display: flex;
 
-    .browser-results-container{
-        position:relative;
-       overflow: auto;
-        width: 90%;
-       
-      
-        height: 700px;
-        
-        
-        
-        scrollbar-width:0px;
-        
-        scrollbar-color: transparent;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content:start;
-        align-content: start;
-        
-        
+      justify-content: space-between;
+      height: 54px;
+      margin-right: 12px;
 
-            
-       
+      p {
+        border-radius: 6px;
+        margin-left: 12px;
+        margin-right: 12px;
+      }
+    }
 
-        .browser-result-inner-container{
-            margin-bottom: 12px;
-            width:auto;
-            height: auto;
-           
-            animation-name: fade;
-           animation-iteration-count: 1;
-            animation-duration: .3s;
-           @keyframes fade {
-            0%{
-                filter: opacity(0);
-                transform: translateX(-280px);
-            }
+    .browser-result-container {
+      margin-bottom: 8px;
+    }
+  }
 
-          
-           }
+  .browser-results-container::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+  }
 
-           
-        }
-
-
-       .browser-result-li-img{
-        width: 70px;
-        height: 40px;
-        margin: 6px 6px;
-        border-radius: 4px;
-        object-fit: cover;
-        border:2px solid rgba(146, 87, 87, 0.091);
-       }
-
-        li{
-            border-radius: 6px;
-            display: flex;
-            
-            justify-content: space-between;
-            height:54px;
-            margin-right: 12px;
-           
-            
-            
-
-            p{
-                border-radius: 6px;
-                margin-left: 12px;
-                margin-right: 12px;
-            }
-        }
-
-        .browser-result-container{
-            margin-bottom: 8px;
-
-        
-        }
-
-     }
-
-     .browser-results-container::-webkit-scrollbar{
-        width: 0px;
-        height: 0px;
-     }
-
-     .browser-results-container__shorter{
-        display:block;
-     }
-
-     
-
+  .browser-results-container__shorter {
+    display: block;
+  }
 }
