--- a/src/Components/scss/HeaderConnectorType.scss
+++ b/src/Components/scss/HeaderConnectorType.scss
@@ -1,126 +1,95 @@
-
 .result-container-show {
-    display: flex;
+  display: flex;
 
-    position: absolute;
-    top: 0;
-    margin-top: 6*12px;
-    z-index: 10;
-    
+  position: relative;
+  top: 0;
+  margin-top: 6 * 12px;
+  z-index: 10;
 }
 
 .result-container-hide {
-    display: none;
-    
+  display: none;
 }
 
-.catalogo-text-container{
-   
-    border-radius: 4px;
+.catalogo-text-container {
+  border-radius: 4px;
 }
-
-
 
 .header-banner__down-text__catalogo-container-text {
-    z-index: 1000;
-   
-    margin-top: -22px;
-    padding: 0;
-   
-   .catalogo-text-container{
+  z-index: 1000;
+
+  margin-top: -22px;
+  padding: 0;
+
+  .catalogo-text-container {
     padding: 10px 10px;
     padding-left: 16px;
-   }
+  }
 
-
-
-
- 
-
-    .home-icon-products-link {
-        font-size: 1.6em;
-        margin: 0 6px 0 6px;
-    }
-
+  .home-icon-products-link {
+    font-size: 1.6em;
+    margin: 0 6px 0 6px;
+  }
 }
 
-
-
 .product-section__category__filter__category-results-container {
+  width: 90%;
 
-    width: 90%;
-
-    z-index: 10;
-    height: auto;
-   
-
+  z-index: 10;
+  height: auto;
+  margin-top: 12px;
 }
 
 .product-section-_category__filter__categories-main-container {
+  width: 100%;
 
-    width: 100%;
-
-
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
-
 
 .product-senction__category__filter__categories-container {
-    margin-top: -16px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    
+  margin-top: -16px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 
-
-
+  .result-zoom-container {
+    max-width: auto;
+    height: 32px;
     p {
-       
-
-        border-radius: 4px;
-        max-width: fit-content;
-        padding: 4px 9px 4px 9px;
-        margin: 5px 6px 5px 6px;
-
-
-
-
-
-
+      padding: 4px 9px 4px 9px;
+      border-radius: 4px;
     }
-
+  }
 }
-
-
-
 
 .product-section__category__filter-container {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-   
-   
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 
-    div {
+  div {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-
-
-
-
-
-
-    .product-section__category-filter__icon {
-        font-size: 1.8em;
-
-    }
+  .product-section__category-filter__icon {
+    font-size: 1.8em;
+  }
 }
-
-
-
+.product-section__category__filter-main-container {
+  div {
+    border-radius: 6px !important;
+    padding: 2px 8px;
+    padding-left: 12px;
+  }
+}
+.category-filter-container {
+  margin-top: -24px;
+  z-index: 500;
+  border: 1px solid rgba(0, 0, 0, 0.002);
+  border-radius: 4px !important;
+}
