--- a/src/Components/scss/ProductSectionCategoryCardSection.scss
+++ b/src/Components/scss/ProductSectionCategoryCardSection.scss
@@ -1,264 +1,203 @@
+.category-product-section-main-container {
+  width: 100%;
 
+  padding-top: 6 * 6px;
 
-.category-product-section-main-container{
-    width: 100%;
-   
-    
-    padding-top: 6*6px;
+  .category-product-section__card-main-container {
+    min-width: 96px;
+  }
+}
+.category-product-section__category-txt-container {
+  justify-content: space-between;
+  width: 90%;
+}
 
+.category-product-section__category-see-more-button {
+  border-radius: 4px;
+  padding: 4px 6px 4px 6px;
+}
+.category-product-section__seemore-flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 
-    .category-product-section__card-main-container{
-      min-width: 96px;
+  width: 90%;
+}
+
+.category-product-section__seemore-container {
+  justify-content: center;
+}
+
+.category-product-section__category-seemore-button-up {
+  position: absolute;
+  right: 10 * 2px;
+  top: -6 * 9px;
+  padding: 4px 6px 4px 6px;
+  border-radius: 4px;
+}
+.category-product-section__seemore-icon {
+  color: rgb(140, 138, 138);
+  font-size: 1.4em;
+}
+.category-product-section__category-seemore-button {
+  border-radius: 4px;
+  padding: 4px 6px 4px 6px;
+}
+
+.category-product-section__category-name-txt {
+  padding: 4px 12px 4px 12px;
+  border-radius: 4px;
+}
+.category-product-section-card-grid-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: stretch;
+}
+
+.category-product-section__card-main-container {
+  cursor: pointer;
+  width: 44%;
+  width: 30%;
+  min-width: 76px;
+  max-width: 190px;
+  border-radius: 6px;
+
+  height: auto;
+  margin: 1% 1% 1% 1%;
+}
+
+.category-product-section__card__pagination-button-container {
+  margin-top: 16px;
+
+  button {
+    margin: 2px 4px 2px 4px;
+    padding: 6px 10px 6px 10px;
+    border: none;
+    border-radius: 4px;
+  }
+}
+
+.category-product-section__card__percentage__container {
+  position: relative;
+  top: -6px;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  margin-bottom: -10px;
+  align-self: end;
+
+  p {
+    margin-right: 8px;
+    font-size: 10px;
+  }
+}
+
+.category-product-section__image-container {
+  width: 100%;
+
+  img {
+    max-width: 100%;
+    height: 74px;
+    width: 86%;
+    min-width: 86%;
+    border-radius: 4px;
+    object-fit: cover;
+  }
+
+  @media (min-width: 570px) {
+    img {
+      height: 104px;
     }
-    
-    }
-.category-product-section__category-txt-container{
-
-    justify-content: space-between;
+  }
+  @media (min-width: 1600px) {
     width: 90%;
+  }
 }
 
-
-
-
-.category-product-section__category-see-more-button{
-    border-radius: 4px;
-    padding: 4px 6px 4px 6px;
-}
-.category-product-section__seemore-flex-container{
-    display: flex;
-    flex-direction: row;
-   justify-content: center;
-    
-    width: 90%;
-    
-}
-
-.category-product-section__seemore-container{
-    justify-content: center;
-    
-}
-
-.category-product-section__category-seemore-button-up{
-    position: absolute;
-    right: 10*2px;
-    top: -6*9px;
-    padding:4px 6px 4px 6px ;
-    border-radius: 4px;
-
-}
-.category-product-section__seemore-icon{
-    color: rgb(140, 138, 138);
-    font-size: 1.4em;
-}
-.category-product-section__category-seemore-button{
-    border-radius: 4px;
-    padding: 4px 6px 4px 6px;
-   
-}
-
-.category-product-section__category-name-txt{
-    padding: 4px 12px 4px 12px;
-    border-radius: 4px;
-}
-.category-product-section-card-grid-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: stretch;
-}
-
-
-.category-product-section__card-main-container{
-   cursor: pointer;
-    width: 44%;
-    width: 30%;
-    min-width: 76px;
-    max-width: 190px;
-    border-radius: 6px;
-    
-    height: auto;
-    margin: 1% 1% 1% 1%;
-
-}
-
-
-.category-product-section__card__pagination-button-container{
-    margin-top: 16px;
-
-    button{
-        margin: 2px 4px 2px 4px;
-        padding: 6px 10px 6px 10px;
-        border: none;
-        border-radius: 4px;
-
-
-    }
-
-
-}
-
-
-
-
-.category-product-section__card__percentage__container{
-    position: relative;
-    top: -6px;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-   margin-bottom: -10px;
-    align-self: end;
-
-        p{
-            margin-right: 8px;
-            font-size: 10px;
-           
-        }
-}
-
-.category-product-section__image-container{
-    
-    width: 100%;
-    
-    
-    img{    
-      
-        max-width: 100%;
-        height: 74px;
-        width: 86%;
-        min-width: 86%;
-        border-radius: 4px;
-        object-fit:cover;
-
-
-    }
-
-
-    @media (min-width: 570px){
-        img{
-            height: 104px;
-        }
-    }
-    @media (min-width: 1600px){
-      width: 90%;
-    }
-}
-
-
-.product-card__fake-price{
+.product-card__fake-price {
   font-size: 10px;
   font-weight: 500;
 
-
-    position: relative;
-    bottom: -2px;
-
- }
-
-
-
-.category-product-section__prices-container,.category-product-section__name-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-
-    width: 90%;
-
+  position: relative;
+  margin-top: -10px;
+  margin-left: 4px;
+}
+.product-real-price {
+  margin-top: 0px;
+  margin-left: 3px;
+  margin-bottom: 12px;
 }
 
+.category-product-section__prices-container,
+.category-product-section__name-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 
-.category-product-section__name-container{
-        
-        width: 84%;
-        text-align: center;
+  width: 90%;
 }
 
-.category-product-section__prices-container{
+.category-product-section__name-container {
+  width: 84%;
+  text-align: center;
+}
 
+.category-product-section__prices-container {
+  justify-content: center;
+}
+
+@media (min-width: 428px) {
+  .category-product-section__category-txt-container {
+    width: 80%;
+  }
+
+  .category-product-section-card-grid-container {
+    width: 100%;
+  }
+
+  .category-product-section__category-seemore-button-up {
+    right: 10%;
+  }
+}
+
+@media (min-width: 470px) {
+  .category-product-section__category-txt-container {
+    width: 70%;
+  }
+  .category-product-section__category-seemore-button-up {
+    right: 15%;
+  }
+
+  .category-product-section-card-grid-container {
     justify-content: center;
-
-
-   p{
-    margin-top: 0;
-    margin: 0 6px 16px 6px;
-   }
-
+  }
 }
 
-
-
-
-
-@media (min-width: 428px){
-    .category-product-section__category-txt-container{
-        width: 80%;
-        
-    
-    }
-
-    .category-product-section-card-grid-container{
-        width: 100%;
-     
-    }
-
-    .category-product-section__category-seemore-button-up{
-        right: 10%;
-    }
+@media (min-width: 496px) {
+  .category-product-section__card-main-container {
+    width: 30%;
+  }
 }
 
-@media (min-width: 470px){
-    .category-product-section__category-txt-container{
-        width: 70%;
-        
-    
-    }
-    .category-product-section__category-seemore-button-up{
-        right: 15%;
-    }
-
-    .category-product-section-card-grid-container{
-        justify-content: center;
-    
-        
-
-        
-    }
-        
+@media (min-width: 700px) {
+  .category-product-section__category-txt-container {
+    width: 60%;
+  }
+  .category-product-section-card-grid-container {
+    width: 94%;
+  }
 }
 
-@media (min-width: 496px){
-    .category-product-section__card-main-container{
-        width: 30%;
-    }
+@media (min-width: 1200px) {
+  .category-product-section__category-txt-container {
+    width: 58%;
+  }
+  .category-product-section-card-grid-container {
+    width: 80%;
+  }
+  .category-product-section__card-main-container {
+    max-width: 180px;
+  }
 }
-
-
-@media (min-width: 700px){
-    .category-product-section__category-txt-container{
-        width: 60%;
-        
-    
-    }
-    .category-product-section-card-grid-container{
-        width: 80%;
-        
-     
-    } 
-
- }
-
-@media (min-width: 1200px){
-    .category-product-section__category-txt-container{
-        width: 58%;
-        
-    
-    }
-    .category-product-section-card-grid-container{
-        width: 70%;
-        
-     
-    } 
-
- }
