adding some new filtering features

--- a/src/Components/scss/BrowserPopupContent.scss
+++ b/src/Components/scss/BrowserPopupContent.scss
@@ -11,6 +11,7 @@
   background-color: rgba(152, 124, 132, 0.758);
   background-color: hsla(349, 16%, 68%, 0.92);
   background-color: hsla(34, 40%, 82%, 0.928);
+  background-color: hsla(22, 61%, 92%, 0.9);
   backdrop-filter: blur(2px);
   -webkit-backdrop-filter: blur((2px));
 }
