--- a/src/Components/scss/ProductSectionCategoryCardSection.scss
+++ b/src/Components/scss/ProductSectionCategoryCardSection.scss
@@ -68,6 +68,14 @@
   margin: 1% 1% 1% 1%;
 }
 
+.category-product-section__cards-filter-button-container{
+  position: relative;
+}
+.card-filter-button{
+  border-radius: 4px;
+  padding: 6px;
+}
+
 .category-product-section__card__pagination-button-container {
   margin-top: 16px;
 
