--- a/src/Components/scss/ProductSectionCategoryCardSection.scss
+++ b/src/Components/scss/ProductSectionCategoryCardSection.scss
@@ -87,6 +87,28 @@
   }
 }
 
+
+
+
+.filter-options{
+  position: absolute;
+  z-index: 1500;
+  top: 42px;
+  right: 0px;
+  width: 128px;
+  border-radius: 6px;
+  text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
 .category-product-section__card__percentage__container {
   position: relative;
   top: -6px;
