--- a/src/Components/scss/HeaderConnectorType.scss
+++ b/src/Components/scss/HeaderConnectorType.scss
@@ -94,3 +94,15 @@
   border: 1px solid rgba(0, 0, 0, 0.002);
   border-radius: 4px !important;
 }
+
+
+
+@media (min-width: 1200px) {
+.header-banner__down-text__catalogo-container-text{
+ 
+  margin-top: 6px;
+
+
+}
+
+}
