--- a/src/Components/scss/HeaderNavbarPortal.scss
+++ b/src/Components/scss/HeaderNavbarPortal.scss
@@ -1,5 +1,10 @@
 
-
+.navbar-index{
+  z-index: 1000 !important; 
+}
+.navbar-fade{
+  z-index: 1000!important;
+}
 
   .mobile-navbar {
     position: absolute;
@@ -9,13 +14,13 @@
    
   
     width: 100%;
-    height: 66%;
+    height: 56%;
     background-color: #8e3e4a73;
     background-color: hsla(22, 61%, 92%, 0.9);
     
-    z-index: 1000;
-    animation: navAnimation .25s cubic-bezier(0.25, 0.1, 0.29, 1);
-    animation-iteration-count: 1;
+    z-index: 1000 !important;
+ /*    animation: navAnimation .25s cubic-bezier(0.25, 0.1, 0.29, 1);
+    animation-iteration-count: 1; */
   }
   
 
