canging styles to product section and addin animations to cards

--- a/src/Components/scss/ProductSectionCategoryCardSection.scss
+++ b/src/Components/scss/ProductSectionCategoryCardSection.scss
@@ -2,6 +2,7 @@
   width: 100%;
 
   padding-top: 6 * 6px;
+  margin-bottom: -1px;
 
   .category-product-section__card-main-container {
     min-width: 116px;
