--- a/src/Components/scss/HeaderBanner.scss
+++ b/src/Components/scss/HeaderBanner.scss
@@ -115,6 +115,17 @@
 
 
 
+//product section header banner mod
+
+.header-banner-container-productSection-mod{
+    .header-banner__glass-filter{
+            background-color: hsla(22, 61%, 92%);
+    }
+}
+
+
+
+
 
 
 
