--- a/src/GlobalStyles.scss
+++ b/src/GlobalStyles.scss
@@ -153,6 +153,10 @@ text-decoration: underline;
    background-color: hsl(22, 60%, 92%);
   
 }
+
+.bg-c{
+    background-color: hsla(351, 22%,86%, 0.991);
+}
 /* .bg-A-W-50{
    background-color: rgb(239, 223, 223);
 } */
