--- a/src/GlobalStyles.scss
+++ b/src/GlobalStyles.scss
@@ -155,7 +155,7 @@ text-decoration: underline;
 }
 
 .bg-c{
-    background-color: hsla(351, 22%,86%, 0.991);
+    background-color: hsla(351, 34%,90%);
 }
 /* .bg-A-W-50{
    background-color: rgb(239, 223, 223);
