--- a/src/Components/scss/ProductSectionCategoryCardSection.scss
+++ b/src/Components/scss/ProductSectionCategoryCardSection.scss
@@ -6,7 +6,8 @@
 
   .category-product-section__card-main-container {
     min-width: 116px;
-    max-width: 160px;
+    max-width: 160px!important;
+    width: 64px!important;
   }
 }
 .category-product-section__category-txt-container {
@@ -76,7 +77,7 @@
 .category-product-section-card-grid-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap:nowrap;
   justify-content: center;
   align-content: stretch;
 
@@ -202,6 +203,26 @@
 
 .category-product-section__prices-container {
   justify-content: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.expanded-grid-card-products{
+  flex-wrap: wrap!important;
 }
 
 @media (min-width: 428px) {
